--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>The o44 Project</title>
 </head>
+
 <body>
-    
+    <div id="container">
+        <div class="circle">
+            <div class="firstSection">
+                <div class="box one">
+                    <h1>Hello!</h1>
+                </div>
+                <div class="middle"></div>
+                <div class="box two">
+                    <h1>Ggs!</h1>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
+
+<script src="/js/core.js"></script>
+
 </html>
