--- a/misc/planering.html
+++ b/misc/planering.html
@@ -4,6 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,18 +12,24 @@
     <title>Dokumentation projekt Vt</title>
 
     <style>
-        table, td, th {
+        table,
+        td,
+        th {
             border: 1px solid black
         }
     </style>
 
 </head>
+
 <body>
 
     <h1>Dokumentation projekt Vt</h1>
 
     <h2>1. Idébeskrivning</h2>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
+    Skapa hemsidan till mitt företag "0FortyFour handelsbolag".
+    Företaget är fokuserad på programmering, webbutveckling och programmeringskurser och sidan ska representera detta.
+    Sidan ska även ha information om oss som äger företaget och sätt att kontakta oss!
 
     <h2>2. Planering</h2>
 
@@ -34,96 +41,101 @@
 
     <table>
         <tr>
-            <th>Vecka</th><th>På lektionen</th><th>Utanför lektionen</th>
+            <th>Vecka</th>
+            <th>På lektionen</th>
+            <th>Utanför lektionen</th>
         </tr>
 
         <tr>
             <td>4</td>
             <td>
-            <!-- Vad görs på lektionen vecka 4? -->
+                <!-- Vad görs på lektionen vecka 4? -->
+                Planering + skiss.
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 4? -->
+                Börja kolla på scroll och hur man skulle kunna scrolla "i en cirkel"
+                <!-- Vad görs utanför lektionen vecka 4? -->
             </td>
         </tr>
 
-        <tr>          
+        <tr>
             <td>5</td>
             <td>
-            <!-- Vad görs på lektionen vecka 5? -->
+                Fixa skalet för sidan, med de 4 eller 8 delsidorna.
+                <!-- Vad görs på lektionen vecka 5? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 5? -->
+                <!-- Vad görs utanför lektionen vecka 5? -->
             </td>
         </tr>
 
-        <tr>          
+        <tr>
             <td>6</td>
             <td>
-            <!-- Vad görs på lektionen vecka 6? -->
+                <!-- Vad görs på lektionen vecka 6? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 6? -->
+                <!-- Vad görs utanför lektionen vecka 6? -->
             </td>
         </tr>
 
-        <tr>           
+        <tr>
             <td>7</td>
             <td>
-            <!-- Vad görs på lektionen vecka 7? -->
+                <!-- Vad görs på lektionen vecka 7? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 7? -->
+                <!-- Vad görs utanför lektionen vecka 7? -->
             </td>
         </tr>
 
-        <tr>           
+        <tr>
             <td>8</td>
             <td>
-            <!-- Vad görs på lektionen vecka 8? -->
+                <!-- Vad görs på lektionen vecka 8? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 8? -->
+                <!-- Vad görs utanför lektionen vecka 8? -->
             </td>
         </tr>
 
-        <tr>          
+        <tr>
             <td>9</td>
             <td>
-            <!-- Vad görs på lektionen vecka 9? -->
+                <!-- Vad görs på lektionen vecka 9? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 9? -->
+                <!-- Vad görs utanför lektionen vecka 9? -->
             </td>
         </tr>
 
-        <tr>          
+        <tr>
             <td>10</td>
             <td>
-            <!-- Vad görs på lektionen vecka 10? -->
+                <!-- Vad görs på lektionen vecka 10? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 10? -->
+                <!-- Vad görs utanför lektionen vecka 10? -->
             </td>
         </tr>
 
-        <tr>           
+        <tr>
             <td>11</td>
             <td>
-            <!-- Vad görs på lektionen vecka 11? -->
+                <!-- Vad görs på lektionen vecka 11? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 11? -->
+                <!-- Vad görs utanför lektionen vecka 11? -->
             </td>
         </tr>
 
-        <tr>          
+        <tr>
             <td>12</td>
             <td>
-            <!-- Vad görs på lektionen vecka 12? -->
+                <!-- Vad görs på lektionen vecka 12? -->
             </td>
             <td>
-            <!-- Vad görs utanför lektionen vecka 12? -->
+                <!-- Vad görs utanför lektionen vecka 12? -->
             </td>
         </tr>
 
@@ -135,6 +147,10 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
+    Påbörjade handskiss och fungerade över olika idéer. Tanken är att skapa något unikt som fångar användarnas intresse
+    och tyder på vår "kunnighet" inom programmering.
+    Lite olika idéer är : Rörlig CSS bakgrund, sida där man scrollar i en "cirkel", ha små mimiatyrer av alla våra
+    projekt som vi har skapat på.
 
     <h3>Lektion vecka 5</h3>
     <!-- Fyll på med dokumentation här. -->
@@ -166,4 +182,5 @@
     Konkreta förbättringsförslag i produkt + process. -->
 
 </body>
+
 </html>
