--- a/index.html
+++ b/index.html
@@ -13,13 +13,40 @@
 <body>
     <div id="container">
         <div class="circle">
-            <div class="firstSection">
+            <div class="section firstSec">
                 <div class="box one">
-                    <h1>Hello!</h1>
+                    <h1>1</h1>
                 </div>
                 <div class="middle"></div>
                 <div class="box two">
-                    <h1>Ggs!</h1>
+                    <h1>5</h1>
+                </div>
+            </div>
+            <div class="section secondSec">
+                <div class="box one">
+                    <h1>2</h1>
+                </div>
+                <div class="middle"></div>
+                <div class="box two">
+                    <h1>6</h1>
+                </div>
+            </div>
+            <div class="section thirdSec">
+                <div class="box one">
+                    <h1>3</h1>
+                </div>
+                <div class="middle"></div>
+                <div class="box two">
+                    <h1>7</h1>
+                </div>
+            </div>
+            <div class="section fourthSec">
+                <div class="box one">
+                    <h1>4</h1>
+                </div>
+                <div class="middle"></div>
+                <div class="box two">
+                    <h1>8</h1>
                 </div>
             </div>
 
