--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="circle">
             <div class="section firstSec">
                 <div class="box one" id="one">
+                    <nav>
+                        <div class="littleCircle">5</div>
+                    </nav>
                     <div class="logo">
                         <h2 class="the">The</h2>
                         <h1>o44</h1>
@@ -27,30 +30,30 @@
                 </div>
             </div>
             <div class="section secondSec">
-                <div class="box one" id="two">
-                    <h1>2</h1>
+                <div class="box one" id="eight">
+                    <h1>8</h1>
                 </div>
                 <div class="middle"></div>
-                <div class="box two" id="six">
-                    <h1>6</h1>
+                <div class="box two" id="four">
+                    <h1>4</h1>
                 </div>
             </div>
             <div class="section thirdSec">
-                <div class="box one" id="three">
-                    <h1>3</h1>
+                <div class="box one" id="seven">
+                    <h1>7</h1>
                 </div>
                 <div class="middle"></div>
-                <div class="box two" id="seven">
-                    <h1>7</h1>
+                <div class="box two" id="three">
+                    <h1>3</h1>
                 </div>
             </div>
             <div class="section fourthSec">
-                <div class="box one" id="four">
-                    <h1>4</h1>
+                <div class="box one" id="six">
+                    <h1>6</h1>
                 </div>
                 <div class="middle"></div>
-                <div class="box two" id="eight">
-                    <h1>8</h1>
+                <div class="box two" id="two">
+                    <h1>2</h1>
                 </div>
             </div>
 
