--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <div class="section firstSec">
                 <div class="box one" id="one">
                     <nav>
-                        <div class="littleCircle">5</div>
+                        <div class="littleCircle c1">5</div>
+                        <div class="littleCircle c2">5</div>
+                        <div class="littleCircle c3">5</div>
+                        <div class="littleCircle c4">5</div>
                     </nav>
                     <div class="logo">
                         <h2 class="the">The</h2>
