--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
             <div class="section firstSec">
                 <div class="box one" id="one">
                     <nav>
-                        <div class="littleCircle c1">5</div>
-                        <div class="littleCircle c2">5</div>
-                        <div class="littleCircle c3">5</div>
-                        <div class="littleCircle c4">5</div>
+                        <div class="littleCircle c1">
+                            <h1>Om oss</h1>
+                        </div>
+                        <div class="littleCircle c2">
+                                <h1>Projekt</h1>
+                        </div>
+                        <div class="littleCircle c3">
+                                <h1>Kontakt</h1>
+                        </div>
+                        <div class="littleCircle c4">
+                                <h1>Övrigt</h1>
+                        </div>
                     </nav>
                     <div class="logo">
                         <h2 class="the">The</h2>
@@ -29,34 +37,47 @@
                 </div>
                 <div class="middle"></div>
                 <div class="box two" id="five">
-                    <h1>5</h1>
+                    <h1>Proekt</h1>
                 </div>
             </div>
             <div class="section secondSec">
                 <div class="box one" id="eight">
-                    <h1>8</h1>
+                    <h1>KOntakta oss</h1>
                 </div>
                 <div class="middle"></div>
                 <div class="box two" id="four">
-                    <h1>4</h1>
+                    <h1>Jonas</h1>
                 </div>
             </div>
             <div class="section thirdSec">
                 <div class="box one" id="seven">
-                    <h1>7</h1>
+                    <h1>App</h1>
                 </div>
                 <div class="middle"></div>
                 <div class="box two" id="three">
-                    <h1>3</h1>
+                    <h1>Samuel </h1>
                 </div>
             </div>
             <div class="section fourthSec">
                 <div class="box one" id="six">
-                    <h1>6</h1>
+                    <header>
+                        <h1>Matteräknaren</h1>
+                    </header>
+                    <section>
+                        <article>
+                            <h2>- OM MATTERÄKNAREN</h2>
+                            <h1>För elever, av elever</h1>
+                            <p>Matteräknaren är ett projekt som startade under sportlovet (v. 7) år 2018.</p>
+                            <p>Projektet går ut på att ....</p>
+                        </article>
+                    </section>
+                    <main>
+                        <article></article>
+                    </main>
                 </div>
                 <div class="middle"></div>
                 <div class="box two" id="two">
-                    <h1>2</h1>
+                    <h1>About o44 - projekt och saker vi har varit med om</h1>
                 </div>
             </div>
 
