--- a/index.html
+++ b/index.html
@@ -65,10 +65,15 @@
                     </header>
                     <section>
                         <article>
-                            <h2>- OM MATTERÄKNAREN</h2>
-                            <h1>För elever, av elever</h1>
-                            <p>Matteräknaren är ett projekt som startade under sportlovet (v. 7) år 2018.</p>
-                            <p>Projektet går ut på att ....</p>
+                            <div>
+                                <h2>- OM MATTERÄKNAREN</h2>
+                                <h1>För elever, av elever</h1>
+                                <p>Matteräknaren är ett projekt som startade under sportlovet (v. 7) år 2018.</p>
+                                <p>Projektet går ut på att ....</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum autem expedita quasi ullam voluptatem enim molestias saepe! Quam, quasi consectetur.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum autem expedita quasi ullam voluptatem enim molestias saepe! Quam,<p>
+                                <button></button>
+                            </div>
                         </article>
                     </section>
                     <main>
