--- a/misc/planering.html
+++ b/misc/planering.html
@@ -61,10 +61,12 @@
         <tr>
             <td>5</td>
             <td>
-                Fixa skalet för sidan, med de 4 eller 8 delsidorna.
+                Fixa skalet för sidan, med 8 delsidorna.
                 <!-- Vad görs på lektionen vecka 5? -->
             </td>
             <td>
+                Fixa färdigt upplägget. Komma fram till vilka områden (info om oss, företaget, projekt osv) som ska ligga vart på sidan.
+                Börja göra en av sidorna, troligen MR.
                 <!-- Vad görs utanför lektionen vecka 5? -->
             </td>
         </tr>
@@ -72,10 +74,10 @@
         <tr>
             <td>6</td>
             <td>
-                <!-- Vad görs på lektionen vecka 6? -->
+                Fortsätta med nästa sida (3 / 8), börja fundera på skalning på de andra skärmarna. 
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 6? -->
+                Göra klart sida 3 / 8 samt fortsätta med skalning för dator på alla sidor --> komma fram till ett fungearde sätt att bygga för att enkelt kunna skala alla sidor. 
             </td>
         </tr>
 
@@ -147,13 +149,20 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
-    Påbörjade handskiss och fungerade över olika idéer. Tanken är att skapa något unikt som fångar användarnas intresse
+    Påbörjade handskiss och funderade över olika idéer. Tanken är att skapa något unikt som fångar användarnas intresse
     och tyder på vår "kunnighet" inom programmering.
     Lite olika idéer är : Rörlig CSS bakgrund, sida där man scrollar i en "cirkel", ha små mimiatyrer av alla våra
-    projekt som vi har skapat på.
+    projekt som vi har skapat direkt på sidan så att det går att testa på vår produkt där. 
+    Nästa vecka ska en mer detaljerad skiss göras samt att börja kolla på hur en sådan scrollfunktion skulle se ut. 
 
     <h3>Lektion vecka 5</h3>
     <!-- Fyll på med dokumentation här. -->
+    Idag fortsatte jag med att fixa själva layouten på sidorna. Jag hade innan lektionen fixat själva scrollningen. 
+    Stötte dock på diverse problem med att sidan även skrollade vertikalt och inte bara sidledes som tanken var. 
+    Lyckades fixa felet, dock ej helt fixat för liten mobil (av någon anledning...)
+    Planen är att till nästa vecka börja designen på en av delsidorna och även komma fram till det bästa sättet att skala alla sidor.
+    I och med att alla sidor på sidan kommer vara relativt lika känns det som en bra idé att tidigt ha koll på att skalningen blir lätt att fixa.
+    Blir därför mindre en pina i slutet då alla sidor är färdiga och jag märker att det är svårt att anpassa sidan även för större enheter (dator, platta)
 
     <h3>Lektion vecka 6</h3>
     <!-- Fyll på med dokumentation här. -->
