--- a/index.html
+++ b/index.html
@@ -77,7 +77,17 @@
                         </article>
                     </section>
                     <main>
-                        <article></article>
+                        <article>
+                            <div class="screen">
+                                <div class="movingCircle" id="movingCircle1"></div>
+                                <div class="movingCircle" id="movingCircle2"></div>
+                                <h1>MATTERÄKNAREN</h1>
+                                <h2>Ett digitalt läromedel</h2>
+                                <div class="button">
+                                    <h2>Gå Vidare</h2>
+                                </div>
+                            </div>
+                        </article>
                     </main>
                 </div>
                 <div class="middle"></div>
