Skiss and scaling
Fixed my scetch and the scaling on the the Matteräknaren-site. Coolers!

--- a/misc/planering.html
+++ b/misc/planering.html
@@ -84,9 +84,11 @@
         <tr>
             <td>7</td>
             <td>
+                Lov!
                 <!-- Vad görs på lektionen vecka 7? -->
             </td>
             <td>
+                Fixa klart MR sidan samt att börja på övriga. 
                 <!-- Vad görs utanför lektionen vecka 7? -->
             </td>
         </tr>
@@ -94,6 +96,7 @@
         <tr>
             <td>8</td>
             <td>
+                Bilder på mig och Jonas till sidan - Photoshop
                 <!-- Vad görs på lektionen vecka 8? -->
             </td>
             <td>
@@ -166,6 +169,11 @@
 
     <h3>Lektion vecka 6</h3>
     <!-- Fyll på med dokumentation här. -->
+    Idag började jag med skalningen för Matteräknaren-sidan. Jag hade redan från start skapat sidan med hjälp av ett grid, därför var det väldigt enkelt att nu ändra om detta så att det lade sig passande för desktop.
+    Det blir dock lite problem när det gällde att skala skärmen och titeln på ett fungerande sätt. Jag hade använt mig av enheten vw, vilket gjorde att när bredden ändrades på skärmen blev det ingen bra skalning. 
+    Istället för att ändra alla taggar där jag använde mig av vw gjorde jag så att jag satte en variabel vid nämn "multiplier", vilket gjorde att jag kunde ändra den för att multiplicera min vw med olika värden. 
+    Exempelvis : Vid desktop är multiplier 1, dvs 45x1=45 & vid mobil är multiplier 2, dvs 45x2=90. 
+    Nästa vecka ska jag fortsätta med den sista sidan på skärmen till Matteräknaren samt att börja fixa på den andra sidan. 
 
     <h3>Lektion vecka 8</h3>
     <!-- Fyll på med dokumentation här. -->
