--- a/misc/planering.html
+++ b/misc/planering.html
@@ -175,6 +175,10 @@
     Exempelvis : Vid desktop är multiplier 1, dvs 45x1=45 & vid mobil är multiplier 2, dvs 45x2=90. 
     Nästa vecka ska jag fortsätta med den sista sidan på skärmen till Matteräknaren samt att börja fixa på den andra sidan. 
 
+    <h3>vecka 7</h3>
+    <b>Period 1</b>
+    Ändrade grid i app från 1fr & 5fr --> 1fr & 4fr för att kunna centrera titeln i blocket utan att minska avståndet från toppen. Ändrade till 150px & 4fr för att få till en bra skalning!
+
     <h3>Lektion vecka 8</h3>
     <!-- Fyll på med dokumentation här. -->
 
