--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <section>
                         <article>
                             <div class="mrContainer">
-                                <h2>- OM MATTERÄKNAREN</h2>
-                                <h1>För elever, av elever</h1>
+                                <h2>- OM APPEN</h2>
+                                <h1>Inte själv, Tillsammans</h1>
                                 <div>
                                     <p>Matteräknaren är ett projekt som startade under sportlovet (v. 7) år 2018.</p>
                                     <p>Projektet går ut på att ....</p>
@@ -81,7 +81,79 @@
                             </div>
                         </article>
                     </section>
-                    <main></main>
+                    <main>
+                        <article>
+                            <div class="appContainer">
+                                <div class="appIndex">
+                                    <div class="movingCircle" id="movingCircle1"></div>
+                                    <div class="movingCircle" id="movingCircle2"></div>
+                                    <h1>MATH</h1>
+                                    <img src="/img/Ai.svg" alt="profile_figure">
+                                </div>
+                                <div class="appMenu">
+                                    <nav>
+                                        <img class="appMenuButton" src="/img/menu-24px.svg" alt="menu">
+                                        <div>
+                                            <p>20x</p>
+                                            <img src="/img/ruby_color.svg" alt="ruby">
+                                        </div>
+                                    </nav>
+                                    <header>
+                                        <h1>SELECT</h1>
+                                        <h2>MODE</h2>
+                                    </header>
+                                    <main>
+                                        <div class="movingCircle" id="movingCircle1"></div>
+                                        <div class="movingCircle" id="movingCircle2"></div>
+                                        <div class="mainCircle">
+                                            <div class="shield">
+                                                <div class="playArrow"></div>
+                                            </div>
+                                            <div class="appCon">
+                                                <div class="appImg">
+                                                    <img src="/img/Ai.svg" alt="profile_figure">
+                                                </div>
+                                                
+                                                <div class="appText">
+                                                    <h1>Normal</h1>
+                                                    <p>Samla rubines och utmana dina kompisar i Normalt spelsätt</p>
+                                                    <p>Få kortast tid på 20 rätta frågor</p>
+                                                </div>
+                                            </div>
+                                            <div class="appCircle" id="littleOne"></div>
+                                            <div class="appCircle" id="littleTwo"></div>
+                                            <div class="appCircle" id="littleThree"></div>
+                                        </div>
+                                    </main>
+                                    <footer>
+                                        <h2 class="the">The</h2>
+                                        <h1>o44</h1>
+                                        <h2 class="project">Project</h2>
+                                    </footer>
+                                </div>
+                                <div class="appGame">
+                                    <header>
+                                        <div class="appGameButton">
+                                            <h2>Tillbaka</h2>
+                                        </div>
+                                    </header>
+                                    <main>
+                                        <h2>1/20</h2>
+                                        <h1 class="appQuestion">Waiting</h1>
+                                        <div>
+                                            <input type="text" id="appUserinput">
+                                            <button></button>
+                                        </div>
+                                    </main>
+                                    <footer>
+                                        <h2 class="the">The</h2>
+                                        <h1>o44</h1>
+                                        <h2 class="project">Project</h2>
+                                    </footer>
+                                </div>
+                            </div>
+                        </article>
+                    </main>
                 </div>
                 <div class="middle"></div>
                 <div class="box two" id="three">
