--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <div class="backgroundContainer">
+        <ul class="boxarea">
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+         </ul>
+    </div>
     <div id="container">
         <div class="circle">
             <div class="section firstSec">
@@ -26,7 +38,7 @@
                             <h1>Kontakt</h1>
                         </div>
                         <div class="littleCircle c4">
-                            <h1>Övrigt</h1>
+                            <h1>Om o44</h1>
                         </div>
                     </nav>
                     <div class="logo">
