Changes to Contact & personal
Added the logo to the sides about the members of o44.
Changed the design of Contact.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
             </div>
             <div class="section secondSec">
                 <div class="box one" id="eight">
-                    <h1>KOntakta oss</h1>
+                    <main>
+                        <header>
+                            <h1>Kontakta oss</h1>
+                        </header>
+                        <section>
+                            <article>
+                                <h1>o44</h1>
+                                <div>
+                                    <p>Mail</p>
+                                    <p>Linked in</p>
+                                    <p>Instagram</p>
+                                    <p>Address</p>
+                                </div>
+                            </article>
+                        </section>
+                        <section>
+                            <article>
+                                <div></div>
+                                <h1>Samuel</h1>
+                                <div>
+                                    <p>Mail</p>
+                                    <p>Linked in</p>
+                                    <p>Instagram</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div></div>
+                                <h1>Jonas</h1>
+                                <div>
+                                    <p>Mail</p>
+                                    <p>Linked in</p>
+                                    <p>Instagram</p>
+                                </div>
+                            </article>
+                        </section>
+                    </main>
+                    <section>
+                        <article>
+                            <h1>Skicka mail</h1>
+                            <input type="text" placeholder="Ärende">
+                            <textarea placeholder="Skriv informationen här..."></textarea>
+                            <div>
+                                <input type="text" placeholder="Mail"><button>Skicka</button>
+                            </div>
+                        </article>
+                    </section>
+                    <footer>
+                        <p class="the">The</p>
+                            <h1>o44</h1>
+                        <p class="project">Project</p>
+                    </footer>
                 </div>
                 <div class="middle"></div>
                 <div class="box two employee" id="four">
@@ -106,6 +156,11 @@
                     <main>
                         <div></div>
                     </main>
+                    <article class="emLogo">
+                        <h2 class="the">The</h2>
+                        <h1>o44</h1>
+                        <h2 class="project">Project</h2>
+                    </article>
                     <section>
                         <article>
                             <h1>Jonas</h1>
@@ -131,11 +186,11 @@
             <div class="section thirdSec">
                 <div class="box one" id="seven">
                     <header>
-                        <h1>App</h1>
+                        <h1>MatteRäknaren-App</h1>
                     </header>
                     <div class="mainContainer">
                         <header>
-                            <h1>App</h1>
+                            <h1>MatteRäknaren-App</h1>
                         </header>
                         <section>
                             <article>
@@ -248,6 +303,11 @@
                     <main>
                         <div></div>
                     </main>
+                    <article class="emLogo">
+                        <h2 class="the">The</h2>
+                        <h1>o44</h1>
+                        <h2 class="project">Project</h2>
+                    </article>
                     <section>
                         <article>
                             <h1>Samuel</h1>
