--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <div class="section firstSec">
                 <div class="box one" id="one">
                     <nav>
-                        <div class="littleCircle c1">
+                        <div class="littleCircle" id="c1">
                             <h1>Om oss</h1>
                         </div>
-                        <div class="littleCircle c2">
+                        <div class="littleCircle" id="c2">
                             <h1>Projekt</h1>
                         </div>
-                        <div class="littleCircle c3">
+                        <div class="littleCircle" id="c3">
                             <h1>Kontakt</h1>
                         </div>
-                        <div class="littleCircle c4">
+                        <div class="littleCircle" id="c4">
                             <h1>Om o44</h1>
                         </div>
                     </nav>
