--- a/misc/planering.html
+++ b/misc/planering.html
@@ -17,6 +17,9 @@
         th {
             border: 1px solid black
         }
+        img {
+            width: 50vw;
+        }
     </style>
 
 </head>
@@ -172,6 +175,7 @@
     Planen är att till nästa vecka börja designen på en av delsidorna och även komma fram till det bästa sättet att skala alla sidor.
     I och med att alla sidor på sidan kommer vara relativt lika känns det som en bra idé att tidigt ha koll på att skalningen blir lätt att fixa.
     Blir därför mindre en pina i slutet då alla sidor är färdiga och jag märker att det är svårt att anpassa sidan även för större enheter (dator, platta)
+    <br>
     Index : <img src="/img/index_added_menu.PNG" alt="">
 
 
@@ -183,24 +187,26 @@
     Exempelvis : Vid desktop är multiplier 1, dvs 45x1=45 & vid mobil är multiplier 2, dvs 45x2=90. 
     
     Nästa vecka ska jag fortsätta med den sista sidan på skärmen till Matteräknaren samt att börja fixa på den andra sidan. 
-
+    <br>
     Första prototypen av Skärmen : 
     <img src="/img/MR_before_screen.PNG" alt="">
+    <br>
     Förstasidan (skärm) : 
     <img src="/img/MR_added_index.PNG" alt="">
+    <br>
     Spelsidan (skräm) - utan JavaScripten för att kunna köra uppgifterna : 
     <img src="/img/MR_gameSite_withoutJS.PNG" alt="">
+    <br>
     Spelsidan (skärm) - med JavaScript 
     <img src="/img/MR_gameSite_withJS.PNG" alt="">
-
+    <br>
     Layouten av sidan (utan skärm)
     <img src="/img/MR_before_screen.PNG" alt="">
-
+    <br>
     För skalning & anpassning mellan skärmstorlek - lade till en scroll på informationsrutan : 
     <img src="/img/MR_textarea_withScroll.PNG" alt="">
 
     <h3>vecka 7</h3>
-    <b>Period 1</b>
     Ändrade grid i app från 1fr & 5fr --> 1fr & 4fr för att kunna centrera titeln i blocket utan att minska avståndet från toppen. Ändrade om igen till 150px & 4fr för att få till en bra skalning!
 
     Började arbeta med nästa sida, vilket är den sida där vi ska visa upp vår app. Min tanke är att göra färdigt de sidor med prototyperna av vår produkt först då jag tror att dessa blir svårast / jobbigast. 
@@ -211,27 +217,35 @@
     Denna titel hade jag som standard dåld (mobil), men visade den när man var i desktop läge.
 
     Bild på grid på desktop läge - innan ändring. Även här bestämde jag mig sen för att ändra så att titln hade en height på 150px för att jag tyckte att det gav bäst skalning. 
+    <br>
     <img src="/img/APP_grid.PNG" alt="">
-
+    <br>
     Första idén på hur skärmen ska fungera. Min första tanke var att precis som med Matteräknaren skapa en bild för hur mobilen skulle se ut. 
     När jag var inne i illustrator och höll på såg jag dock att det jag ville åt gick att göra mycket smidigare med endast kod. 
     När det gällde Matteräknaren ville jag skapa en monitor och den har många fler detaljer och former som exempelvis foten. 
     En mobilram har däremot endast en border som är olika tjock beroende på om det exempelvis ska få plats kamera eller ej. Därmed valde jag att göra en border runt mobilskärmen istället för att lägga in en bild som bakgrund. 
     Min tanke är att det går snabbare att läsa in lite css än en bild och dessutom kändes det som att det var lättare om jag ville anpassa mobilens storlek efter hand om allting var i kod.
+    <br>
     <img src="/img/APP_phoneLayout.PNG" alt="">
-
+    <br>
     Meny-sidan för Appen. Gick väldigt smidigt att göra, hade alla mått från figma modellen i och med att jag har jobbat med att designa denna prototyp på gränssnittet. Hade även själva koden för de snurrande cirklarna från Matteräknaren. 
+    <br>
     <img src="/img/APP_menu.PNG" alt="">
-
+    <br>
     Som nämnt ovan har jag haft mycket problem när det gäller hur jag ska fixa skalningen för sidan. Just nu har jag inte kommit på någon bra / smidig lösning till skalningen, så det får vänta. 
-    
+    <br>
     Desktop vy - har ett grid :
+    <br>
     <img src="/img/APP_problemWithScaling1.PNG" alt="">
+    <br>
     Mobil vy , grid, men flex på blocken på nedre delen. Problem - Svårt att centrera de block som är klickat på (i detta fall mobilprototypen) & måste skala för att enheter (använder nu vw) :
+    <br>
     <img src="/img/APP_problemWithScaling2.PNG" alt="">
+    <br>
     Mobil vy, andra aktiv. Samma problem som med bilden ovan! 
+    <br>
     <img src="/img/APP_problemWithScaling3.PNG" alt="">
-
+    <br>
     Jag stötte även på problem gällade scrollen på textinformationen. På Matteräknaren-sidan lyckades jag få att texten hela tiden var 50% av blocket höjd och det som inte fick plats gick att scrolla fram. 
     Av någon outgrundlig anledning fungerade dock detta inte på denna sidan, så jag löste det genom att sätta en specifik höjd i vh på själva textrutan. 
     Det är dock inte en stabil lösning då det blir konstigt när man byter mellan enheter (layouten ändras). 
